--- a/gmao/templates/gmao/liste_appareils_distributeurs.html
+++ b/gmao/templates/gmao/liste_appareils_distributeurs.html
@@ -16,13 +16,12 @@
         </div>
     </div>
 
-    <!-- Modal pour ajouter/modifier un distributeur -->
     <div id="distributeurModal" class="modal fade" tabindex="-1" role="dialog">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="distributeurModalLabel">Ajouter/Modifier un distributeur</h5>
-                    <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
@@ -72,7 +71,7 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
                     <button type="button" class="btn btn-primary" id="sauvegarderDistributeur">Enregistrer</button>
                 </div>
             </div>
@@ -95,7 +94,7 @@
 $(document).ready(function() {
     function loadAppareils() {
         $.ajax({
-            url: "{% url 'gmao:get_appareils_distributeurs_data' %}",
+            url: "{% url 'get_appareils_distributeurs_data' %}",
             type: 'GET',
             success: function(response) {
                 var appareilsHtml = '';
@@ -150,7 +149,7 @@ $(document).ready(function() {
         `;
         $(`#${containerId}`).append(newField);
 
-        $.get("{% url 'gmao:get_produits' %}", function(data) {
+        $.get("{% url 'get_produits' %}", function(data) {
             $(`#${containerId} .produit:last`).html(data.map(produit => `<option value="${produit.id}">${produit.nom_produit}</option>`).join(''));
         });
     }
@@ -162,9 +161,8 @@ $(document).ready(function() {
         $(this).closest('.pistolet-row').remove();
     });
 
-    function sauvegarderDistributeur(id = null) {
+    $('#sauvegarderDistributeur').click(function() {
         var formData = {
-            id: id,
             station: $('#station').val(),
             modele_ad: $('#modele').val(),
             num_serie: $('#numSerie').val(),
@@ -177,22 +175,26 @@ $(document).ready(function() {
             }
         };
 
-        $('#facePrimaireContainer .pistolet-row').each(function() {
+        $('#facePrimaireContainer .pistolet-row').each(function(index) {
             formData.faces.R.push({
                 produit: $(this).find('.produit').val(),
                 date_flexible: $(this).find('.date-flexible').val()
             });
         });
 
-        $('#faceSecondaireContainer .pistolet-row').each(function() {
+        $('#faceSecondaireContainer .pistolet-row').each(function(index) {
             formData.faces.L.push({
                 produit: $(this).find('.produit').val(),
                 date_flexible: $(this).find('.date-flexible').val()
             });
         });
 
+        var url = $('#distributeurForm').data('id')
+            ? "{% url 'update_distributeur' 0 %}".replace('0', $('#distributeurForm').data('id'))
+            : "{% url 'ajouter_distributeur' %}";
+
         $.ajax({
-            url: id ? "{% url 'gmao:update_distributeur' 0 %}".replace('0', id) : "{% url 'gmao:ajouter_distributeur' %}",
+            url: url,
             type: 'POST',
             contentType: 'application/json',
             data: JSON.stringify(formData),
@@ -208,15 +210,11 @@ $(document).ready(function() {
                 alert('Une erreur est survenue lors de la sauvegarde.');
             }
         });
-    }
-
-    $('#sauvegarderDistributeur').click(function() {
-        sauvegarderDistributeur($('#distributeurForm').data('id'));
     });
 
     $(document).on('click', '.modifier-appareil', function() {
         var id = $(this).data('id');
-        $.get("{% url 'gmao:get_distributeur' 0 %}".replace('0', id), function(data) {
+        $.get("{% url 'get_distributeur' 0 %}".replace('0', id), function(data) {
             $('#distributeurForm').data('id', id);
             $('#station').val(data.station);
             $('#modele').val(data.modele_ad);
@@ -242,15 +240,17 @@ $(document).ready(function() {
     {% if user.role == 'ADMIN' %}
     $('#ajouterDistributeur').click(function() {
         $('#distributeurForm')[0].reset();
-        $('#distributeurForm').data('id', null);
+        $('#distributeurForm').removeData('id');
+        $('#facePrimaireContainer').empty();
+        $('#faceSecondaireContainer').empty();
         $('#distributeurModal').modal('show');
     });
 
     $(document).on('click', '.supprimer-appareil', function() {
-        const id = $(this).data('id');
+        var id = $(this).data('id');
         if (confirm('Êtes-vous sûr de vouloir supprimer ce distributeur ?')) {
             $.ajax({
-                url: "{% url 'gmao:supprimer_distributeur' 0 %}".replace('0', id),
+                url: "{% url 'supprimer_distributeur' 0 %}".replace('0', id),
                 type: 'POST',
                 headers: {'X-CSRFToken': '{{ csrf_token }}'},
                 success: function(response) {
@@ -268,11 +268,11 @@ $(document).ready(function() {
     });
     {% endif %}
 
-    $.get("{% url 'gmao:get_stations' %}", function(data) {
+    $.get("{% url 'get_stations' %}", function(data) {
         $('#station').html(data.map(station => `<option value="${station.id}">${station.libelle_station}</option>`).join(''));
     });
 
-    $.get("{% url 'gmao:get_modeles_ad' %}", function(data) {
+    $.get("{% url 'get_modeles_ad' %}", function(data) {
         $('#modele').html(data.map(modele => `<option value="${modele.id}">${modele.libelle_modele}</option>`).join(''));
     });
 });
