--- a/gmao/templates/gmao/liste_appareils_distributeurs.html
+++ b/gmao/templates/gmao/liste_appareils_distributeurs.html
@@ -94,7 +94,7 @@
 $(document).ready(function() {
     function loadAppareils() {
         $.ajax({
-            url: "{% url 'get_appareils_distributeurs_data' %}",
+            url: "{% url 'gmao:get_appareils_distributeurs_data' %}",
             type: 'GET',
             success: function(response) {
                 var appareilsHtml = '';
@@ -134,7 +134,7 @@ $(document).ready(function() {
     loadAppareils();
 
     function ajouterChampPistolet(containerId, orientation) {
-        var newField = `
+        const newField = `
             <div class="form-row pistolet-row">
                 <div class="col">
                     <select class="form-control produit" required></select>
@@ -149,7 +149,7 @@ $(document).ready(function() {
         `;
         $(`#${containerId}`).append(newField);
 
-        $.get("{% url 'get_produits' %}", function(data) {
+        $.get("{% url 'gmao:get_produits' %}", function(data) {
             $(`#${containerId} .produit:last`).html(data.map(produit => `<option value="${produit.id}">${produit.nom_produit}</option>`).join(''));
         });
     }
@@ -190,8 +190,8 @@ $(document).ready(function() {
         });
 
         var url = $('#distributeurForm').data('id')
-            ? "{% url 'update_distributeur' 0 %}".replace('0', $('#distributeurForm').data('id'))
-            : "{% url 'ajouter_distributeur' %}";
+            ? "{% url 'gmao:update_distributeur' 0 %}".replace('0', $('#distributeurForm').data('id'))
+            : "{% url 'gmao:ajouter_distributeur' %}";
 
         $.ajax({
             url: url,
@@ -214,7 +214,7 @@ $(document).ready(function() {
 
     $(document).on('click', '.modifier-appareil', function() {
         var id = $(this).data('id');
-        $.get("{% url 'get_distributeur' 0 %}".replace('0', id), function(data) {
+        $.get("{% url 'gmao:get_distributeur' 0 %}".replace('0', id), function(data) {
             $('#distributeurForm').data('id', id);
             $('#station').val(data.station);
             $('#modele').val(data.modele_ad);
@@ -227,7 +227,7 @@ $(document).ready(function() {
             $('#faceSecondaireContainer').empty();
 
             data.pistolets.forEach(function(pistolet) {
-                var containerId = pistolet.orientation === 'R' ? 'facePrimaireContainer' : 'faceSecondaireContainer';
+                const containerId = pistolet.orientation === 'R' ? 'facePrimaireContainer' : 'faceSecondaireContainer';
                 ajouterChampPistolet(containerId, pistolet.orientation);
                 $(`#${containerId} .pistolet-row:last .produit`).val(pistolet.produit);
                 $(`#${containerId} .pistolet-row:last .date-flexible`).val(pistolet.date_flexible);
@@ -250,7 +250,7 @@ $(document).ready(function() {
         var id = $(this).data('id');
         if (confirm('Êtes-vous sûr de vouloir supprimer ce distributeur ?')) {
             $.ajax({
-                url: "{% url 'supprimer_distributeur' 0 %}".replace('0', id),
+                url: "{% url 'gmao:supprimer_distributeur' 0 %}".replace('0', id),
                 type: 'POST',
                 headers: {'X-CSRFToken': '{{ csrf_token }}'},
                 success: function(response) {
@@ -268,11 +268,11 @@ $(document).ready(function() {
     });
     {% endif %}
 
-    $.get("{% url 'get_stations' %}", function(data) {
+    $.get("{% url 'gmao:get_stations' %}", function(data) {
         $('#station').html(data.map(station => `<option value="${station.id}">${station.libelle_station}</option>`).join(''));
     });
 
-    $.get("{% url 'get_modeles_ad' %}", function(data) {
+    $.get("{% url 'gmao:get_modeles_ad' %}", function(data) {
         $('#modele').html(data.map(modele => `<option value="${modele.id}">${modele.libelle_modele}</option>`).join(''));
     });
 });
