--- a/gmao/templates/gmao/liste_appareils_distributeurs.html
+++ b/gmao/templates/gmao/liste_appareils_distributeurs.html
@@ -3,98 +3,95 @@
 
 {% block title %}Liste des Appareils Distributeurs{% endblock %}
 
+{% block extra_css %}
+<style>
+    .card {
+        height: 100%;
+    }
+    .pistolet-info {
+        font-size: 0.9em;
+    }
+</style>
+{% endblock %}
+
 {% block content %}
-    <div class="container-fluid mt-4">
-        <h2 class="mb-4">Liste des Appareils Distributeurs</h2>
+<div class="container-fluid mt-4">
+    <h2 class="mb-4">Liste des Appareils Distributeurs</h2>
 
-        {% if user.role == 'ADMIN' %}
-            <button id="ajouterDistributeur" class="btn btn-primary mb-3">Ajouter un distributeur</button>
-        {% endif %}
+    {% if user.role == 'ADMIN' %}
+    <button id="ajouterDistributeur" class="btn btn-primary mb-3">Ajouter un distributeur</button>
+    {% endif %}
 
-        <div class="row" id="appareilsContainer">
-            <!-- Les appareils seront chargés ici dynamiquement -->
-        </div>
+    <div class="row" id="appareilsContainer">
+        <!-- Les appareils seront chargés ici dynamiquement -->
     </div>
+</div>
 
-    <div id="distributeurModal" class="modal fade" tabindex="-1" role="dialog">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="distributeurModalLabel">Ajouter/Modifier un distributeur</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <form id="distributeurForm">
-                        {% csrf_token %}
+<div id="distributeurModal" class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="distributeurModalLabel">Ajouter/Modifier un distributeur</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form id="distributeurForm">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <label for="station">Station</label>
+                        <select class="form-control" id="station" required></select>
+                    </div>
+                    <div class="form-group">
+                        <label for="modele">Modèle</label>
+                        <select class="form-control" id="modele" required></select>
+                    </div>
+                    <div class="form-group">
+                        <label for="numSerie">Numéro de série</label>
+                        <input type="text" class="form-control" id="numSerie" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="typeContrat">Type de contrat</label>
+                        <select class="form-control" id="typeContrat" required>
+                            <option value="Sous Contrat">Sous Contrat</option>
+                            <option value="Hors Contrat">Hors Contrat</option>
+                        </select>
+                    </div>
+                    <div id="faces">
                         <div class="form-group">
-                            <label for="station">Station</label>
-                            <select class="form-control" id="station" required></select>
+                            <label for="facePrincipale">Numéro Face Principale</label>
+                            <input type="number" class="form-control" id="facePrincipale" required>
                         </div>
-                        <div class="form-group">
-                            <label for="modele">Modèle</label>
-                            <select class="form-control" id="modele" required></select>
-                        </div>
-                        <div class="form-group">
-                            <label for="numSerie">Numéro de série</label>
-                            <input type="text" class="form-control" id="numSerie" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="typeContrat">Type de contrat</label>
-                            <select class="form-control" id="typeContrat" required>
-                                <option value="Sous Contrat">Sous Contrat</option>
-                                <option value="Hors Contrat">Hors Contrat</option>
-                            </select>
-                        </div>
-                        <div id="faces">
-                            <div class="form-group">
-                                <label for="facePrincipale">Numéro Face Principale</label>
-                                <input type="number" class="form-control" id="facePrincipale" required>
-                            </div>
-                            <h6>Face Primaire (R)</h6>
-                            <div id="facePrimaireContainer"></div>
-                            <button type="button" class="btn btn-secondary mt-2" id="ajouterPistoletPrimaire">Ajouter
-                                pistolet face primaire
-                            </button>
+                        <h6>Face Primaire (R)</h6>
+                        <div id="facePrimaireContainer"></div>
+                        <button type="button" class="btn btn-secondary mt-2" id="ajouterPistoletPrimaire">Ajouter pistolet face primaire</button>
 
-                            <div class="form-group mt-3">
-                                <label for="faceSecondaire">Numéro Face Secondaire</label>
-                                <input type="number" class="form-control" id="faceSecondaire" required>
-                            </div>
-                            <h6 class="mt-3">Face Secondaire (L)</h6>
-                            <div id="faceSecondaireContainer"></div>
-                            <button type="button" class="btn btn-secondary mt-2" id="ajouterPistoletSecondaire">Ajouter
-                                pistolet face secondaire
-                            </button>
+                        <div class="form-group mt-3">
+                            <label for="faceSecondaire">Numéro Face Secondaire</label>
+                            <input type="number" class="form-control" id="faceSecondaire" required>
                         </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
-                    <button type="button" class="btn btn-primary" id="sauvegarderDistributeur">Enregistrer</button>
-                </div>
+                        <h6 class="mt-3">Face Secondaire (L)</h6>
+                        <div id="faceSecondaireContainer"></div>
+                        <button type="button" class="btn btn-secondary mt-2" id="ajouterPistoletSecondaire">Ajouter pistolet face secondaire</button>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+                <button type="button" class="btn btn-primary" id="sauvegarderDistributeur">Enregistrer</button>
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
-{% block extra_css %}
-    <style>
-        .card {
-            height: 100%;
-        }
 
-        .pistolet-info {
-            font-size: 0.9em;
-        }
-    </style>
-{% endblock %}
 {% block extra_js %}
 <script>
 $(document).ready(function() {
     function loadAppareils() {
         $.ajax({
-            url: "{% url 'gmao:get_appareils_distributeurs_data' %}",
+            url: "{% url 'get_appareils_distributeurs_data' %}",
             type: 'GET',
             success: function(response) {
                 var appareilsHtml = '';
@@ -134,13 +131,14 @@ $(document).ready(function() {
     loadAppareils();
 
     function ajouterChampPistolet(containerId, orientation) {
-        const newField = `
+        var pistoletCount = $(`#${containerId} .pistolet-row`).length + 1;
+        var newField = `
             <div class="form-row pistolet-row">
                 <div class="col">
-                    <select class="form-control produit" required></select>
+                    <select class="form-control produit" required data-pistolet="${orientation}${pistoletCount}"></select>
                 </div>
                 <div class="col">
-                    <input type="date" class="form-control date-flexible">
+                    <input type="date" class="form-control date-flexible" data-pistolet="${orientation}${pistoletCount}">
                 </div>
                 <div class="col-auto">
                     <button type="button" class="btn btn-danger btn-sm remove-pistolet">Supprimer</button>
@@ -149,7 +147,7 @@ $(document).ready(function() {
         `;
         $(`#${containerId}`).append(newField);
 
-        $.get("{% url 'gmao:get_produits' %}", function(data) {
+        $.get("{% url 'get_produits' %}", function(data) {
             $(`#${containerId} .produit:last`).html(data.map(produit => `<option value="${produit.id}">${produit.nom_produit}</option>`).join(''));
         });
     }
@@ -159,6 +157,11 @@ $(document).ready(function() {
 
     $(document).on('click', '.remove-pistolet', function() {
         $(this).closest('.pistolet-row').remove();
+        // Réindexer les pistolets restants
+        $('.pistolet-row').each(function(index) {
+            var orientation = $(this).find('.produit').data('pistolet').charAt(0);
+            $(this).find('.produit, .date-flexible').data('pistolet', orientation + (index + 1));
+        });
     });
 
     $('#sauvegarderDistributeur').click(function() {
@@ -175,23 +178,20 @@ $(document).ready(function() {
             }
         };
 
-        $('#facePrimaireContainer .pistolet-row').each(function(index) {
-            formData.faces.R.push({
-                produit: $(this).find('.produit').val(),
-                date_flexible: $(this).find('.date-flexible').val()
-            });
-        });
-
-        $('#faceSecondaireContainer .pistolet-row').each(function(index) {
-            formData.faces.L.push({
+        $('.pistolet-row').each(function() {
+            var pistoletData = $(this).find('.produit').data('pistolet');
+            var orientation = pistoletData.charAt(0);
+            var index = pistoletData.substring(1);
+            formData.faces[orientation].push({
+                index: index,
                 produit: $(this).find('.produit').val(),
                 date_flexible: $(this).find('.date-flexible').val()
             });
         });
 
         var url = $('#distributeurForm').data('id')
-            ? "{% url 'gmao:update_distributeur' 0 %}".replace('0', $('#distributeurForm').data('id'))
-            : "{% url 'gmao:ajouter_distributeur' %}";
+            ? "{% url 'update_distributeur' 0 %}".replace('0', $('#distributeurForm').data('id'))
+            : "{% url 'ajouter_distributeur' %}";
 
         $.ajax({
             url: url,
@@ -214,7 +214,7 @@ $(document).ready(function() {
 
     $(document).on('click', '.modifier-appareil', function() {
         var id = $(this).data('id');
-        $.get("{% url 'gmao:get_distributeur' 0 %}".replace('0', id), function(data) {
+        $.get("{% url 'get_distributeur' 0 %}".replace('0', id), function(data) {
             $('#distributeurForm').data('id', id);
             $('#station').val(data.station);
             $('#modele').val(data.modele_ad);
@@ -227,10 +227,11 @@ $(document).ready(function() {
             $('#faceSecondaireContainer').empty();
 
             data.pistolets.forEach(function(pistolet) {
-                const containerId = pistolet.orientation === 'R' ? 'facePrimaireContainer' : 'faceSecondaireContainer';
+                var containerId = pistolet.orientation === 'R' ? 'facePrimaireContainer' : 'faceSecondaireContainer';
                 ajouterChampPistolet(containerId, pistolet.orientation);
-                $(`#${containerId} .pistolet-row:last .produit`).val(pistolet.produit);
-                $(`#${containerId} .pistolet-row:last .date-flexible`).val(pistolet.date_flexible);
+                var lastRow = $(`#${containerId} .pistolet-row:last`);
+                lastRow.find('.produit').val(pistolet.produit);
+                lastRow.find('.date-flexible').val(pistolet.date_flexible);
             });
 
             $('#distributeurModal').modal('show');
@@ -250,7 +251,7 @@ $(document).ready(function() {
         var id = $(this).data('id');
         if (confirm('Êtes-vous sûr de vouloir supprimer ce distributeur ?')) {
             $.ajax({
-                url: "{% url 'gmao:supprimer_distributeur' 0 %}".replace('0', id),
+                url: "{% url 'supprimer_distributeur' 0 %}".replace('0', id),
                 type: 'POST',
                 headers: {'X-CSRFToken': '{{ csrf_token }}'},
                 success: function(response) {
@@ -268,11 +269,11 @@ $(document).ready(function() {
     });
     {% endif %}
 
-    $.get("{% url 'gmao:get_stations' %}", function(data) {
+    $.get("{% url 'get_stations' %}", function(data) {
         $('#station').html(data.map(station => `<option value="${station.id}">${station.libelle_station}</option>`).join(''));
     });
 
-    $.get("{% url 'gmao:get_modeles_ad' %}", function(data) {
+    $.get("{% url 'get_modeles_ad' %}", function(data) {
         $('#modele').html(data.map(modele => `<option value="${modele.id}">${modele.libelle_modele}</option>`).join(''));
     });
 });
