--- a/gmao/templates/gmao/liste_appareils_distributeurs.html
+++ b/gmao/templates/gmao/liste_appareils_distributeurs.html
@@ -91,7 +91,7 @@
 $(document).ready(function() {
     function loadAppareils() {
         $.ajax({
-            url: "{% url 'get_appareils_distributeurs_data' %}",
+            url: "{% url 'gmao:get_appareils_distributeurs_data' %}",
             type: 'GET',
             success: function(response) {
                 var appareilsHtml = '';
@@ -131,8 +131,8 @@ $(document).ready(function() {
     loadAppareils();
 
     function ajouterChampPistolet(containerId, orientation) {
-        var pistoletCount = $(`#${containerId} .pistolet-row`).length + 1;
-        var newField = `
+        const pistoletCount = $(`#${containerId} .pistolet-row`).length + 1;
+        const newField = `
             <div class="form-row pistolet-row">
                 <div class="col">
                     <select class="form-control produit" required data-pistolet="${orientation}${pistoletCount}"></select>
@@ -147,7 +147,7 @@ $(document).ready(function() {
         `;
         $(`#${containerId}`).append(newField);
 
-        $.get("{% url 'get_produits' %}", function(data) {
+        $.get("{% url 'gmao:get_produits' %}", function(data) {
             $(`#${containerId} .produit:last`).html(data.map(produit => `<option value="${produit.id}">${produit.nom_produit}</option>`).join(''));
         });
     }
@@ -159,13 +159,13 @@ $(document).ready(function() {
         $(this).closest('.pistolet-row').remove();
         // Réindexer les pistolets restants
         $('.pistolet-row').each(function(index) {
-            var orientation = $(this).find('.produit').data('pistolet').charAt(0);
+            const orientation = $(this).find('.produit').data('pistolet').charAt(0);
             $(this).find('.produit, .date-flexible').data('pistolet', orientation + (index + 1));
         });
     });
 
     $('#sauvegarderDistributeur').click(function() {
-        var formData = {
+        const formData = {
             station: $('#station').val(),
             modele_ad: $('#modele').val(),
             num_serie: $('#numSerie').val(),
@@ -179,9 +179,9 @@ $(document).ready(function() {
         };
 
         $('.pistolet-row').each(function() {
-            var pistoletData = $(this).find('.produit').data('pistolet');
-            var orientation = pistoletData.charAt(0);
-            var index = pistoletData.substring(1);
+            const pistoletData = $(this).find('.produit').data('pistolet');
+            const orientation = pistoletData.charAt(0);
+            const index = pistoletData.substring(1);
             formData.faces[orientation].push({
                 index: index,
                 produit: $(this).find('.produit').val(),
@@ -189,9 +189,9 @@ $(document).ready(function() {
             });
         });
 
-        var url = $('#distributeurForm').data('id')
-            ? "{% url 'update_distributeur' 0 %}".replace('0', $('#distributeurForm').data('id'))
-            : "{% url 'ajouter_distributeur' %}";
+        const url = $('#distributeurForm').data('id')
+            ? "{% url 'gmao:update_distributeur' 0 %}".replace('0', $('#distributeurForm').data('id'))
+            : "{% url 'gmao:ajouter_distributeur' %}";
 
         $.ajax({
             url: url,
@@ -213,8 +213,8 @@ $(document).ready(function() {
     });
 
     $(document).on('click', '.modifier-appareil', function() {
-        var id = $(this).data('id');
-        $.get("{% url 'get_distributeur' 0 %}".replace('0', id), function(data) {
+        const id = $(this).data('id');
+        $.get("{% url 'gmao:get_distributeur' 0 %}".replace('0', id), function(data) {
             $('#distributeurForm').data('id', id);
             $('#station').val(data.station);
             $('#modele').val(data.modele_ad);
@@ -227,9 +227,9 @@ $(document).ready(function() {
             $('#faceSecondaireContainer').empty();
 
             data.pistolets.forEach(function(pistolet) {
-                var containerId = pistolet.orientation === 'R' ? 'facePrimaireContainer' : 'faceSecondaireContainer';
+                const containerId = pistolet.orientation === 'R' ? 'facePrimaireContainer' : 'faceSecondaireContainer';
                 ajouterChampPistolet(containerId, pistolet.orientation);
-                var lastRow = $(`#${containerId} .pistolet-row:last`);
+                const lastRow = $(`#${containerId} .pistolet-row:last`);
                 lastRow.find('.produit').val(pistolet.produit);
                 lastRow.find('.date-flexible').val(pistolet.date_flexible);
             });
@@ -248,10 +248,10 @@ $(document).ready(function() {
     });
 
     $(document).on('click', '.supprimer-appareil', function() {
-        var id = $(this).data('id');
+        const id = $(this).data('id');
         if (confirm('Êtes-vous sûr de vouloir supprimer ce distributeur ?')) {
             $.ajax({
-                url: "{% url 'supprimer_distributeur' 0 %}".replace('0', id),
+                url: "{% url 'gmao:supprimer_distributeur' 0 %}".replace('0', id),
                 type: 'POST',
                 headers: {'X-CSRFToken': '{{ csrf_token }}'},
                 success: function(response) {
@@ -269,11 +269,11 @@ $(document).ready(function() {
     });
     {% endif %}
 
-    $.get("{% url 'get_stations' %}", function(data) {
+    $.get("{% url 'gmao:get_stations' %}", function(data) {
         $('#station').html(data.map(station => `<option value="${station.id}">${station.libelle_station}</option>`).join(''));
     });
 
-    $.get("{% url 'get_modeles_ad' %}", function(data) {
+    $.get("{% url 'gmao:get_modeles_ad' %}", function(data) {
         $('#modele').html(data.map(modele => `<option value="${modele.id}">${modele.libelle_modele}</option>`).join(''));
     });
 });
