--- a/gmao/templates/gmao/liste_appareils_distributeurs.html
+++ b/gmao/templates/gmao/liste_appareils_distributeurs.html
@@ -78,7 +78,7 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
                 <button type="button" class="btn btn-primary" id="sauvegarderDistributeur">Enregistrer</button>
             </div>
         </div>
@@ -91,7 +91,7 @@
 $(document).ready(function() {
     function loadAppareils() {
         $.ajax({
-            url: "{% url 'get_appareils_distributeurs_data' %}",
+            url: "{% url 'gmao:get_appareils_distributeurs_data' %}",
             type: 'GET',
             success: function(response) {
                 var appareilsHtml = '';
@@ -147,7 +147,7 @@ $(document).ready(function() {
         `;
         $(`#${containerId}`).append(newField);
 
-        $.get("{% url 'get_produits' %}", function(data) {
+        $.get("{% url 'gmao:get_produits' %}", function(data) {
             var select = $(`#${containerId} .produit:last`);
             select.html(data.map(produit => `<option value="${produit.id}">${produit.nom_produit}</option>`).join(''));
             if (pistoletData) {
@@ -190,8 +190,8 @@ $(document).ready(function() {
         });
 
         var url = $('#distributeurForm').data('id')
-            ? "{% url 'update_distributeur' 0 %}".replace('0', $('#distributeurForm').data('id'))
-            : "{% url 'ajouter_distributeur' %}";
+            ? "{% url 'gmao:update_distributeur' 0 %}".replace('0', $('#distributeurForm').data('id'))
+            : "{% url 'gmao:ajouter_distributeur' %}";
 
         $.ajax({
             url: url,
@@ -214,7 +214,7 @@ $(document).ready(function() {
 
     $(document).on('click', '.modifier-appareil', function() {
         var id = $(this).data('id');
-        $.get("{% url 'get_distributeur' 0 %}".replace('0', id), function(data) {
+        $.get("{% url 'gmao:get_distributeur' 0 %}".replace('0', id), function(data) {
             $('#distributeurForm').data('id', id);
             $('#station').val(data.station);
             $('#modele').val(data.modele_ad);
@@ -236,6 +236,44 @@ $(document).ready(function() {
     });
 
     // ... Le reste du code reste inchangé ...
+    {% if user.role == 'ADMIN' %}
+    $('#ajouterDistributeur').click(function() {
+        $('#distributeurForm')[0].reset();
+        $('#distributeurForm').removeData('id');
+        $('#facePrimaireContainer').empty();
+        $('#faceSecondaireContainer').empty();
+        $('#distributeurModal').modal('show');
+    });
+
+    $(document).on('click', '.supprimer-appareil', function() {
+        var id = $(this).data('id');
+        if (confirm('Êtes-vous sûr de vouloir supprimer ce distributeur ?')) {
+            $.ajax({
+                url: "{% url 'gmao:supprimer_distributeur' 0 %}".replace('0', id),
+                type: 'POST',
+                headers: {'X-CSRFToken': '{{ csrf_token }}'},
+                success: function(response) {
+                    if (response.success) {
+                        loadAppareils();
+                    } else {
+                        alert('Erreur : ' + response.message);
+                    }
+                },
+                error: function() {
+                    alert('Une erreur est survenue lors de la suppression.');
+                }
+            });
+        }
+    });
+    {% endif %}
+
+    $.get("{% url 'gmao:get_stations' %}", function(data) {
+        $('#station').html(data.map(station => `<option value="${station.id}">${station.libelle_station}</option>`).join(''));
+    });
+
+    $.get("{% url 'gmao:get_modeles_ad' %}", function(data) {
+        $('#modele').html(data.map(modele => `<option value="${modele.id}">${modele.libelle_modele}</option>`).join(''));
+    });
 });
 </script>
 {% endblock %}
