--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MEI| Log in</title>
+    <title>MEI&nbsp;| Log in</title>
     <!-- Inclusion de Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Votre CSS personnalisé -->
