--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.2.7/css/responsive.dataTables.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.6.13/flatpickr.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.6.13/themes/dark.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     {% block extra_css %}{% endblock extra_css %}
     <title>MEI&nbsp;| {% block title %}G M A O {% endblock title %}</title>
 </head>
@@ -110,19 +111,27 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'gmao_teams:gestion_equipes' %}">Gestion des équipes</a>
                         </li>
+                        <li class="nav-item dropdown">
+                            <a href="#" id="navbarDropdownEquipements" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Équipements
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownEquipements">
+                                <li><a class="dropdown-item" href="{% url 'gmao:liste_appareils_distributeurs' %}">Appareils Distributeurs</a></li>
+                            </ul>
+                        </li>
                     {% elif user.role == 'TECH' %}
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'gmao:liste_interventions' %}">Liste des interventions</a>
                         </li>
+                        <li class="nav-item dropdown">
+                            <a href="#" id="navbarDropdownEquipements" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Équipements
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownEquipements">
+                                <li><a class="dropdown-item" href="{% url 'gmao:liste_appareils_distributeurs' %}">Appareils Distributeurs</a></li>
+                            </ul>
+                        </li>
                     {% endif %}
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownEquipements" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Équipements
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownEquipements">
-                            <li><a class="dropdown-item" href="{% url 'gmao:liste_appareils_distributeurs' %}">Appareils Distributeurs</a></li>
-                        </ul>
-                    </li>
                 </ul>
                 <div class="d-flex flex-column flex-lg-row align-items-start align-items-lg-center">
                     <span class="text-light me-lg-3 mb-2 mb-lg-0">
