--- a/templates/base.html
+++ b/templates/base.html
@@ -33,66 +33,8 @@
 <body>
 <div class="wrapper">
     <header>
-
-        {% comment %}<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-            <div class="container-fluid" style="padding: 0">
-                <a class="navbar-brand" href="{% url 'gmao:home' %}">MEI</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    {% if user.is_authenticated %}
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            {% if user.role == 'ADMIN' %}
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'gmao:liste_interventions' %}">Liste des
-                                        interventions</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'gmao:toutes_les_doleances' %}">Liste des
-                                        doléances</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'gmao_teams:gestion_equipes' %}">Gestion des
-                                        équipes</a>
-                                </li>
-                            {% elif user.role == 'TECH' %}
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'gmao:liste_interventions' %}">Liste des
-                                        interventions</a>
-                                </li>
-                            {% endif %}
-                        </ul>
-                        <div class="d-flex flex-column flex-lg-row align-items-start align-items-lg-center">
-                            <span class="text-light me-lg-3 mb-2 mb-lg-0">
-                                <i class="fa-solid fa-user-alt" style="color: hsl(137, 90%, 50%);"></i>
-                                {{ user.first_name }} {{ user.last_name }}
-                            </span>
-                            {% if user.role == 'ADMIN' %}
-                                <span id="current-time" class="text-light me-lg-3 mb-2 mb-lg-0"></span>
-                            {% endif %}
-                            <a href="{% url 'accounts:logout-admin' %}" class="btn btn-outline-danger btn-sm">
-                                <i class="fas fa-sign-out"></i>
-                            </a>
-                        </div>
-                    {% else %}
-                        <div class="col-sm">
-                            <a class="navbar-brand flex-grow-1" style="color: aliceblue; text-align: center;">
-                                <span class="float-end">
-                                    <i style="color: #0dcaf0;" class="fa-solid fa-user-lock"></i>
-                                    &nbsp;&nbsp;Accès verrouillé
-                                 </span>
-                                {% block nav-btn %}
-                                {% endblock nav-btn %}
-                            </a>
-                        </div>
-                    {% endif %}
-                </div>
-            </div>
-        </nav>{% endcomment %}
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container-fluid" style="padding: 0">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'gmao:home' %}">MEI</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -111,27 +53,19 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'gmao_teams:gestion_equipes' %}">Gestion des équipes</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a href="#" id="navbarDropdownEquipements" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Équipements
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownEquipements">
-                                <li><a class="dropdown-item" href="{% url 'gmao:liste_appareils_distributeurs' %}">Appareils Distributeurs</a></li>
-                            </ul>
-                        </li>
                     {% elif user.role == 'TECH' %}
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'gmao:liste_interventions' %}">Liste des interventions</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a href="#" id="navbarDropdownEquipements" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Équipements
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownEquipements">
-                                <li><a class="dropdown-item" href="{% url 'gmao:liste_appareils_distributeurs' %}">Appareils Distributeurs</a></li>
-                            </ul>
-                        </li>
                     {% endif %}
+                    <li class="nav-item dropdown">
+                        <a href="#" id="navbarDropdownEquipements" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Équipements
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownEquipements" id="equipmentsDropdown">
+                            <li><a class="dropdown-item" href="{% url 'gmao:liste_appareils_distributeurs' %}">Appareils Distributeurs</a></li>
+                        </ul>
+                    </li>
                 </ul>
                 <div class="d-flex flex-column flex-lg-row align-items-start align-items-lg-center">
                     <span class="text-light me-lg-3 mb-2 mb-lg-0">
@@ -159,6 +93,7 @@
         </div>
     </div>
 </nav>
+
     </header>
     <div class="container-fluid" style="padding-top: 70px">
         {% block content %}
