--- a/templates/base.html
+++ b/templates/base.html
@@ -64,6 +64,7 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownEquipements" id="equipmentsDropdown">
                             <li><a class="dropdown-item" href="{% url 'gmao:liste_appareils_distributeurs' %}">Appareils Distributeurs</a></li>
+                            <li><a class="dropdown-item" href="{% url 'gmao:liste_cuves' %}">Cuves</a></li>
                         </ul>
                     </li>
                 </ul>
