--- a/gmao/templates/gmao/detail_intervention.html
+++ b/gmao/templates/gmao/detail_intervention.html
@@ -276,7 +276,8 @@
                         <div class="form-row">
                             <div class="form-group col-md-6">
                                 <label for="heure_debut">Heure de début :</label>
-                                <input type="text" class="form-control" id="heure_debut" name="heure_debut"
+                                <input type="text" class="form-control" id="heure_debut"
+                                       name="heure_debut"
                                        value="{{ intervention.top_debut|time:'H:i' }}"
                                        {% if not intervention.numero_fiche %}readonly{% endif %}>
                             </div>
