--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}">
     <link rel="shortcut icon" href="{% static 'img/logo.ico' %}">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
@@ -35,7 +34,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'gmao:home' %}">Acceuil</a>
+        <a class="navbar-brand" href="{% url 'gmao:home' %}">i2e</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -53,14 +52,14 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'gmao_teams:gestion_equipes' %}">Gestion des équipes</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Stations</a>
-                        </li>
                     {% elif user.role == 'TECH' %}
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'gmao:liste_interventions' %}">Liste des interventions</a>
                         </li>
                     {% endif %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'gmao:liste_stations' %}">Stations</a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a href="#" id="navbarDropdownEquipements" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Équipements
